# LumenAlpha

./: .env.example  .gitignore  .gitmodules  MERGE_AND_SECTOR_ROTATION_PLAN.md  README.md  RELEASE_NOTES_v2.md  pyproject.toml  requirements.txt
config/: tech_board_taxonomy.json
data/a_share_hot_rank/: a_share_board_fetch_summary_latest.csv  a_share_hot_rank_all_latest_latest.csv  a_share_hot_rank_all_ranks_latest.csv  a_share_hot_rank_notes_latest.json  a_share_hot_rank_tech_reclass_notes_latest.json  a_share_hot_rank_tech_source_fetch_latest.csv  a_share_hot_rank_top10_boards_latest.csv  a_share_hot_rank_top10_by_industry_latest.csv  a_share_hot_rank_top2000_boards_latest.csv  (+4 more)
deploy/: DEPLOYMENT.md  bootstrap_ubuntu.sh  env.example  lumenalpha-refresh.service  lumenalpha-refresh.timer  lumenalpha-web.service  nginx-lumenalpha.conf  sync_to_server.sh
lumen_qlib/: __init__.py  factor_catalog.py  sector_rotation_pipeline.py
scripts/: collect_a_share_hot_rank_boards.py  daily_refresh_sector_rotation.py  on_demand_stock.py  reclassify_hot_rank_tech_boards.py  start_sector_dashboard.sh
stock_analyzer_project/: .env.example  OPENCLAW_GUIDE.md  README.md  __init__.py  advanced_signals.py  backtest.py  combo_backtest.py  daily_job.py  data_fetcher.py  email_sender.py  guide_report.py  indicator_engine.py  indicators.py  reporting.py  requirements.txt  research_reporting.py  stock_analyzer_main.py  test_baostock.py  visualizer.py
tests/: test_collect_hot_rank.py  test_factor_catalog.py  test_on_demand_stock.py  test_sector_rotation_markers.py
(+25 files in other folders)
